--- a/Jellyfin.Plugin.FinTube/Configuration/configPage.html
+++ b/Jellyfin.Plugin.FinTube/Configuration/configPage.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <title>FinTube</title>
 </head>
+
 <body>
-    <div id="FinTubeConfigPage" data-role="page" class="page type-interior pluginConfigurationPage" data-require="emby-input,emby-button,emby-select,emby-checkbox">
+    <div id="FinTubeConfigPage" data-role="page" class="page type-interior pluginConfigurationPage"
+        data-require="emby-input,emby-button,emby-select,emby-checkbox">
         <div data-role="content">
             <div class="content-primary">
                 <form id="FinTubeConfigForm">
@@ -18,6 +21,11 @@
                         <label class="inputLabel inputLabelUnfocused" for="exec_ID3">Exec ID3</label>
                         <input id="exec_ID3" name="exec_ID3" type="text" is="emby-input" />
                         <div class="fieldDescription">The executable filepath to id3v2</div>
+                    </div>
+                    <div class="inputContainer">
+                        <label class="inputLabel inputLabelUnfocused" for="exec_ID3">Exec FFMPEG</label>
+                        <input id="exec_FFMPEG" name="exec_FFMPEG" type="text" is="emby-input" />
+                        <div class="fieldDescription">The executable filepath to ffmpeg</div>
                     </div>
                     <div>
                         <button is="emby-button" type="submit" class="raised button-submit block emby-button">
@@ -33,30 +41,33 @@
             };
 
             document.querySelector('#FinTubeConfigPage')
-                .addEventListener('pageshow', function() {
+                .addEventListener('pageshow', function () {
                     Dashboard.showLoadingMsg();
                     ApiClient.getPluginConfiguration(TubeFinConfig.pluginUniqueId).then(function (config) {
                         document.querySelector('#exec_YTDL').value = config.exec_YTDL;
                         document.querySelector('#exec_ID3').value = config.exec_ID3;
+                        document.querySelector('#exec_FFMPEG').value = config.exec_FFMPEG;
                         Dashboard.hideLoadingMsg();
                     });
                 });
 
             document.querySelector('#FinTubeConfigForm')
-                .addEventListener('submit', function(e) {
-                Dashboard.showLoadingMsg();
-                ApiClient.getPluginConfiguration(TubeFinConfig.pluginUniqueId).then(function (config) {
-                    config.exec_YTDL = document.querySelector('#exec_YTDL').value;
-                    config.exec_ID3 = document.querySelector('#exec_ID3').value;
-                    ApiClient.updatePluginConfiguration(TubeFinConfig.pluginUniqueId, config).then(function (result) {
-                        Dashboard.processPluginConfigurationUpdateResult(result);
+                .addEventListener('submit', function (e) {
+                    Dashboard.showLoadingMsg();
+                    ApiClient.getPluginConfiguration(TubeFinConfig.pluginUniqueId).then(function (config) {
+                        config.exec_YTDL = document.querySelector('#exec_YTDL').value;
+                        config.exec_ID3 = document.querySelector('#exec_ID3').value;
+                        config.exec_FFMPEG = document.querySelector('#exec_FFMPEG').value;
+                        ApiClient.updatePluginConfiguration(TubeFinConfig.pluginUniqueId, config).then(function (result) {
+                            Dashboard.processPluginConfigurationUpdateResult(result);
+                        });
                     });
-                });
 
-                e.preventDefault();
-                return false;
-            });
+                    e.preventDefault();
+                    return false;
+                });
         </script>
     </div>
 </body>
+
 </html>
