--- a/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
+++ b/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
@@ -36,6 +36,19 @@
 						<div class="fieldDescription">Will usually download audio as .opus and videos as .webm</div>
 					</div>
 
+					<!--Embed metadata checkbox-->
+					<div class="checkboxContainer checkboxContainer-withDescription">
+							<label class="emby-checkbox-label">
+								<input id="fintube-embed-metadata" name="embed-metadata" type="checkbox" is="emby-checkbox" data-embycheckbox="true" class="emby-checkbox" checked>
+								<span class="checkboxLabel">Embed metadata</span>
+							<span class="checkboxOutline"><span class="material-icons checkboxIcon checkboxIcon-checked check" aria-hidden="true"></span><span class="material-icons checkboxIcon checkboxIcon-unchecked " aria-hidden="true"></span></span></label>
+							<div class="fieldDescription">
+								For video files this may add information such as chapters, title and description.
+								<br>
+								For audio files this may add information such as title or artist. You can still override these with the tagging fields below.
+							</div>
+						</div>
+
 					<div class="checkboxContainer checkboxContainer-withDescription">
 						<label class="emby-checkbox-label">
 							<input id="fintube-audioonly" name="audioonly" type="checkbox" is="emby-checkbox" data-embycheckbox="true" class="emby-checkbox">
@@ -188,7 +201,8 @@
 								"title": 				getfintubeValue("title"),
 								"track":				Number(getfintubeValue("track")),
 								"removenonmusic": 		document.getElementById("fintube-remove-non-music").checked,
-								"embedthumbnail":		document.getElementById("fintube-audio-embed-thumbnail").checked
+								"embedthumbnail":		document.getElementById("fintube-audio-embed-thumbnail").checked,
+								"embedmetadata":		document.getElementById("fintube-embed-metadata").checked,
 							}
 						
 
