--- a/Jellyfin.Plugin.FinTube/Configuration/configPage.html
+++ b/Jellyfin.Plugin.FinTube/Configuration/configPage.html
@@ -22,6 +22,13 @@
                         <input id="exec_ID3" name="exec_ID3" type="text" is="emby-input" />
                         <div class="fieldDescription">The executable filepath to id3v2</div>
                     </div>
+
+                    <!--Custom ytdl args-->
+                     <div class="inputContainer">
+                        <label class="inputLabel inputLabelUnfocused" for="custom_ytdl_args">Custom YT-DL arguments</label>
+                        <input id="custom_ytdl_args" name="custom_ytdl_args" type="text" is="emby-input" />
+                        <div class="fieldDescription">Additional arguments to pass to YT-DL</div>
+                    </div>
                     <div>
                         <button is="emby-button" type="submit" class="raised button-submit block emby-button">
                             <span>Save</span>
@@ -41,6 +48,7 @@
                     ApiClient.getPluginConfiguration(TubeFinConfig.pluginUniqueId).then(function (config) {
                         document.querySelector('#exec_YTDL').value = config.exec_YTDL;
                         document.querySelector('#exec_ID3').value = config.exec_ID3;
+                        document.querySelector('#custom_ytdl_args').value = config.custom_ytdl_args;
                         Dashboard.hideLoadingMsg();
                     });
                 });
@@ -51,6 +59,7 @@
                     ApiClient.getPluginConfiguration(TubeFinConfig.pluginUniqueId).then(function (config) {
                         config.exec_YTDL = document.querySelector('#exec_YTDL').value;
                         config.exec_ID3 = document.querySelector('#exec_ID3').value;
+                        config.custom_ytdl_args = document.querySelector('#custom_ytdl_args').value;
                         ApiClient.updatePluginConfiguration(TubeFinConfig.pluginUniqueId, config).then(function (result) {
                             Dashboard.processPluginConfigurationUpdateResult(result);
                         });
